k8s/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: book-store
  name: book-store-api
  labels:
    app: book-store-api
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: book-store-api
  template:
    metadata:
      labels:
        app: book-store-api
    spec:
      containers:
      - name: book-store-api
        image: bensonmacharia/book-store-api:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            cpu: "500m"
        ports:
        - name: http
          containerPort: 8080
