k8s/postgres_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresdb
  labels:
    app: postgresdb
spec:
  serviceName: postgresdb
  selector:
    matchLabels:
      app: postgresdb
      tier: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresdb
        tier: postgres
    spec:
      containers:
        - image: postgres:latest
          name: postgres
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432 
              name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-persistent-storage
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: efs-claim
