k8s/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book_store_api
  labels:
    app: book_store_api
spec:
  selector:
    app: book_store_api
  ports:
  - name: http
    port: 8080
    targetPort: 8080
