k8s/postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres-service
spec:
  selector:
    app: postgres-service
    tier: postgres
  ports:
  - name: db
    port: 5432
    targetPort: 5432
