k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstoreapi
spec:
  selector:
    app: bookstoreapi
  ports:
  - port: 8000
    targetPort: 8080
